client/main.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,800;1,200;1,300;1,400;1,500;1,600;1,800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap');

/* Color palette */
:root {
  --idewe-blue-tint5:#5AB9EA;
  --idewe-blue-tint4: #91D0F1;
  --idewe-blue-tint3: #ACDCF5;
  --idewe-blue-tint2: #C8E8F8;
  --idewe-blue-tint1: #E3F3FC;
  --idewe-red:#B52555;
  --idewe-red-tint5: #B52555;
  --idewe-red-tint4: #DE5D88;
  --idewe-red-tint3: #E686A6;
  --idewe-red-tint2: #EEAEC4;
  --idewe-red-tint1: #F7D7E1;
  --idewe-yellow:#F0B323;
  --idewe-yellow-tint5:#F0B323;
  --idewe-yellow-tint4: #F5CC6C;
  --idewe-yellow-tint3: #F8D991;
  --idewe-yellow-tint2: #FAE6B6;
  --idewe-yellow-tint1: #FCF2DA;
  --idewe-purple: #68478D;
  --idewe-purple-tint5: #68478D;
  --idewe-purple-tint4: #9A7BBC;
  --idewe-purple-tint3: #B39CCD;
  --idewe-purple-tint2: #CCBDDE;
  --idewe-purple-tint1: #E6DEEE;

  --idewe-blue: #0086BF;
  --idewe-blue-dark: #01426A;
  --idewe-background: linear-gradient(180deg, #E7F0F7 0%, #DFEFF9 100%);
  --idewe-background-solid: #DFE6F0;
  --idewe-gray-light: #9DABBB;
  --idewe-gray-dark: #5F6B78;
  --idewe-black: #2D353E;
  --idewe-white: #ffffff;

  --idewe-green: #319136;
  --idewe-red: #a12525;

  --main-font: 'Maven Pro', 'Montserrat', sans-serif; 
} 

body {
  font-family: var(--main-font);
  font-size: 16px;
  background-color: #E7F0F7 !important;

  overscroll-behavior-y: none;
  overflow-x: hidden; 
  overscroll-behavior-x: none;

  position: relative;
  bottom: 0;
  left: 0;
  right: 0;
  margin: 0;

  /*
  padding:
    env(safe-area-inset-top, 20px)
    env(safe-area-inset-right, 20px)
    env(safe-area-inset-bottom, 20px)
    env(safe-area-inset-left, 20px) !important;
    */
}

.container {
  min-height: 100vh !important;
  overflow: auto;
  max-width: 100%;
  min-height: 100%;
  padding-top: 20px;
  padding-left: 20px !important;
  padding-right: 20px !important;
  background: var(--idewe-background) !important; 
  display: flex;
  flex-direction: column;

  /* Disable text selection and highlighting */
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
}

.container h1 {
  padding-bottom: 10px;
  padding-top: 10px;
  font-family: var(--main-font);
  color: var(--idewe-blue-dark);
  font-size: 30px;
  font-weight: 700;
}

.container h2 {
  font-family: var(--main-font);
  color: var(--idewe-blue-dark);
  font-size: 24px;
  font-weight: 400;
}

